# veac

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  research-video-editing-as-code.md
.github/workflows/: ci.yml  release.yml
crates/veac-cli/: Cargo.toml
crates/veac-cli/src/: main.rs  pipeline.rs
crates/veac-cli/src/commands/: batch.rs  build.rs  check.rs  fmt.rs  mod.rs  plan.rs  probe.rs
crates/veac-codegen/: Cargo.toml
crates/veac-codegen/src/: lib.rs
crates/veac-codegen/tests/: clip_effects_tests.rs  codegen_tests.rs  effects_codegen_tests.rs  new_features_tests.rs  overlay_codegen_tests.rs  transition_codegen_tests.rs
crates/veac-lang/: Cargo.toml
crates/veac-lang/src/: ast.rs  error.rs  lib.rs  token.rs
crates/veac-lang/tests/: lexer_tests.rs  overlay_tests.rs  parser_tests.rs  semantic_tests.rs  transition_tests.rs
crates/veac-runtime/: Cargo.toml
crates/veac-runtime/src/: asset.rs  executor.rs  lib.rs  progress.rs
demo/: main.veac
demo-screen/: main.veac
docs/: architecture.md  cli-reference.md  getting-started.md  language-spec.md
docs/language-reference/: README.md  assets.md  clips.md  literals.md  overlays.md  project.md  timeline-and-tracks.md  transitions.md  variables-and-includes.md
examples/all-features/: shared_assets.veac
examples/batch-demo/: data.csv  template.veac
examples/color-grade/: main.veac
examples/hello-world/: main.veac
examples/image-overlay/: main.veac
examples/minimal/: main.veac
examples/speed-demo/: main.veac
examples/text-overlay/: main.veac
examples/transitions/: main.veac
(+27 files in other folders)
